@@ -1,3 +1,7 @@
+=== 2016-12-13
+* Enhancements
+  * Added #table_elements to ElementLocators
+  * Added #cell_elements to ElementLocators
 === 2016-12-12
 * Enhancements
   * Added #hidden_field_elements to ElementLocators
